// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ce-flex renders 1`] = `
<ce-flex>
  <mock:shadow-root>
    <div class="flex">
      <slot></slot>
    </div>
  </mock:shadow-root>
</ce-flex>
`;

exports[`sc-flex renders 1`] = `
<sc-flex>
  <mock:shadow-root>
    <div class="flex">
      <slot></slot>
    </div>
  </mock:shadow-root>
</sc-flex>
`;
